--- a/PlayTest/Base.lproj/Main.storyboard
+++ b/PlayTest/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8sq-z3-NgG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,128 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kGH-tg-npT">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <edgeInsets key="layoutMargins" top="8" left="0.0" bottom="8" right="0.0"/>
+                                <inset key="scrollIndicatorInsets" minX="0.0" minY="-20" maxX="0.0" maxY="0.0"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="eeA-pu-KGe">
+                                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UGb-eb-WvH">
+                                            <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="ewP-jA-hs9"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="ewP-jA-hs9"/>
+                                                </mask>
+                                            </variation>
+                                            <variation key="heightClass=regular-widthClass=compact">
+                                                <mask key="constraints">
+                                                    <include reference="ewP-jA-hs9"/>
+                                                </mask>
+                                            </variation>
+                                        </label>
+                                    </subviews>
+                                    <animations/>
+                                    <color key="backgroundColor" red="1" green="0.82819907800000003" blue="0.78772308589999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="UGb-eb-WvH" firstAttribute="top" secondItem="eeA-pu-KGe" secondAttribute="top" constant="117" id="QOX-iC-mqg"/>
+                                        <constraint firstAttribute="trailing" secondItem="UGb-eb-WvH" secondAttribute="trailing" constant="38" id="rm4-Vb-yxb"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="subviews">
+                                            <exclude reference="UGb-eb-WvH"/>
+                                        </mask>
+                                        <mask key="constraints">
+                                            <exclude reference="QOX-iC-mqg"/>
+                                            <exclude reference="rm4-Vb-yxb"/>
+                                        </mask>
+                                    </variation>
+                                    <variation key="heightClass=regular-widthClass=compact">
+                                        <mask key="subviews">
+                                            <include reference="UGb-eb-WvH"/>
+                                        </mask>
+                                        <mask key="constraints">
+                                            <include reference="QOX-iC-mqg"/>
+                                            <include reference="rm4-Vb-yxb"/>
+                                        </mask>
+                                    </variation>
+                                </view>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="fcQ-2h-sbY"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="963-Ge-InZ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" red="0.78853248980000001" green="0.81393882799999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="kGH-tg-npT" secondAttribute="trailing" id="1sT-gf-Fj9"/>
+                            <constraint firstItem="kGH-tg-npT" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Fjd-Eh-dvs"/>
+                            <constraint firstItem="kGH-tg-npT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dfy-FR-hsg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kGH-tg-npT" secondAttribute="bottom" id="qXn-cp-efY"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="kGH-tg-npT"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="qXn-cp-efY"/>
+                                <exclude reference="1sT-gf-Fj9"/>
+                                <exclude reference="Fjd-Eh-dvs"/>
+                                <exclude reference="dfy-FR-hsg"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="kGH-tg-npT"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="qXn-cp-efY"/>
+                                <include reference="1sT-gf-Fj9"/>
+                                <include reference="Fjd-Eh-dvs"/>
+                                <include reference="dfy-FR-hsg"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="PNl-HN-ziL"/>
+                    <connections>
+                        <outlet property="my_label" destination="UGb-eb-WvH" id="QYV-YZ-4vG"/>
+                        <outlet property="my_table" destination="kGH-tg-npT" id="B3v-Bg-Kmx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1665" y="219.75"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fGP-7o-SeE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8sq-z3-NgG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qaj-yc-fcX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="vxn-1R-Svx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HRX-tC-urC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="916.5" y="223.5"/>
         </scene>
     </scenes>
 </document>
